# IntelliRename

./: AGENTS.md  LICENSE  README.md  Tasks.md  book_renamer.py  example.env  install.sh  intellirename.py  pyproject.toml
intellirename/: __init__.py  __main__.py  ai.py  config.py  constants.py  exceptions.py  main.py  metadata.py
intellirename/utils/: __init__.py  ai_metadata.py  cache.py
pdf_renamer/: __init__.py  __main__.py  config.py  main.py  metadata.py
pdf_renamer/utils/: ai_metadata.py  cache.py
tests/: __init__.py  test_ai_metadata.py  test_intellirename.py  test_pdf_renamer.py  test_utils.py
