[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intellirename"
version = "0.1.0"
description = "An intelligent tool to rename PDF and EPUB files using metadata and AI enhancement"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "PyPDF2>=3.0.0",
    "python-dateutil>=2.8.2",
    "rich>=13.0.0",  # For better console output
    "requests>=2.28.0",
    "python-dotenv>=0.20.0",
    "types-requests>=2"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "types-python-dateutil>=2.8.19.14",
    "types-requests>=2.28.0",
]

[project.scripts]
intellirename = "intellirename.main:main"

[tool.hatch.build.targets.wheel]
packages = ["intellirename"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "PyPDF2.*"
ignore_missing_imports = true 