[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intellirename"
version = "0.1.1"
description = "An intelligent tool to rename PDF and EPUB files using metadata and AI enhancement"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PyPDF2",
    "python-dateutil",
    "rich",  # For better console output
    "requests",
    "python-dotenv",
    "pytest",  # Added pytest for testing
    "pytest-cov",  # Added pytest-cov for coverage reports
    "pytest-asyncio",  # Added for async tests
    "types-requests",
    "pathvalidate",
    "aiohttp", # Added for async API calls
    "iniconfig",  # Added for pytest dependency
    "packaging",  # Added for pytest dependency
    "pluggy",  # Added for pytest dependency
]

[project.optional-dependencies]
dev = [
    "mypy==1.*",
    "types-python-dateutil==2.*",
    "types-requests==2.*",
    "pytest==8.*",
]
tests = [
    "pytest==8.*",
]

[project.scripts]
intellirename = "intellirename.main:cli_entry_point"

[tool.hatch.build.targets.wheel]
packages = ["intellirename"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.mypy-pytest]
ignore_missing_imports = true

[tool.mypy-pathvalidate]
ignore_missing_imports = true

[tool.mypy-PyPDF2]
ignore_missing_imports = true

[tool.mypy-PyPDF2.errors]
ignore_missing_imports = true

[tool.mypy-tests]
disable_error_code = ["untyped-decorator"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "PyPDF2.*"
ignore_missing_imports = true 